changed my image destination.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <table cellspacing="20">
         <td>
-            <img src="Image/IMG_2608-modified.png" alt="Sayan karmakar" width="300" height="300">
+            <img src="IMG_2608-modified.png" alt="Sayan karmakar" width="300" height="300">
         </td>
         <td>
             <h1>Sayan Karmakar</h1>
