--- a/index.html
+++ b/index.html
@@ -6,11 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Web Page</title>
 </head>
+<style>
+    body {
+        background-color: powderblue;
+    }
+
+    hr {
+        border-style: none;
+        border-top-style: dotted;
+        border-color: grey;
+        border-width: 5px;
+        width: 5%;
+    }
+</style>
 
 <body>
     <table cellspacing="20">
         <td>
-            <img src="IMG_2608-modified.png" alt="Sayan karmakar" width="300" height="300">
+            <img src="Image/IMG_2608-modified.png" alt="Sayan karmakar" width="300" height="300">
         </td>
         <td>
             <h1>Sayan Karmakar</h1>
@@ -18,55 +31,57 @@
             <p>I am a junior Web Developer.&#128512;</p>
         </td>
     </table>
-    <hr size="1" noshade="black">
-    <h2>Books and Teaching</h2>
-    <table>
-        <ul>
-            <li>The Complete iOS App Development Bootcamp</li>
-            <li>The Complete Web Development Bootcamp</li>
-        </ul>
-        <hr size="1" noshade="black">
-    </table>
-    <h2>School Experience</h2>
-    <table cellspacing="25">
-        <thead>
-            <tr>
-                <th>Date</th>
-                <th>School</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>2017-2019</td>
-                <td>Kalyani Public School</td>
-            </tr>
-            <tr>
-                <td>2003-2017</td>
-                <td>Aditya Academy</td>
-            </tr>
-        </tbody>
-    </table>
-    <hr size="1" noshade="black">
-    <h2>Skills</h2>
-    <table>
-        <td>
-            <p>Python</p>
-            <p>java</p>
-            <p>C</p>
-            <p>DBMS</p>
-            <p>HTML</p>
-        </td>
-        <td>
-            <p>⭐⭐</p>
-            <p>⭐</p>
-            <p>⭐⭐⭐</p>
-            <p>⭐</p>
-            <p>⭐⭐</p>
-        </td>
-    </table>
-    <hr size="1" noshade="black">
-    <a href="Contact Me.html">Contact Me</a>
-    <a href="https://www.youtube.com/channel/UC_BC4qKXKHK98qwwf4Vb1pA">Youtube Channel</a>
+    <hr>
+    <center>
+        <h2>Books and Teaching</h2>
+        <table>
+            <ul>
+                <li>The Complete iOS App Development Bootcamp</li>
+                <li>The Complete Web Development Bootcamp</li>
+            </ul>
+            <hr>
+        </table>
+        <h2>School Experience</h2>
+        <table cellspacing="25">
+            <thead>
+                <tr>
+                    <th>Date</th>
+                    <th>School</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>2017-2019</td>
+                    <td>Kalyani Public School</td>
+                </tr>
+                <tr>
+                    <td>2003-2017</td>
+                    <td>Aditya Academy</td>
+                </tr>
+            </tbody>
+        </table>
+        <hr>
+        <h2>Skills</h2>
+        <table cellspacing="25">
+            <td>
+                <p>Python</p>
+                <p>java</p>
+                <p>C</p>
+                <p>DBMS</p>
+                <p>HTML</p>
+            </td>
+            <td>
+                <p>⭐⭐</p>
+                <p>⭐</p>
+                <p>⭐⭐⭐</p>
+                <p>⭐</p>
+                <p>⭐⭐</p>
+            </td>
+        </table>
+        <hr>
+        <a href="Contact Me.html">Contact Me</a>
+        <a href="https://www.youtube.com/channel/UC_BC4qKXKHK98qwwf4Vb1pA">Youtube Channel</a>
+    </center>
 </body>
 
 </html>
